<?xml version="1.0" encoding="utf-8"?>
<com.vlonjatg.progressactivity.ProgressFrameLayout android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    progressActivity:loadingBackgroundColor="#42a5f5"
    progressActivity:emptyBackgroundColor="#42a5f5"
    progressActivity:errorBackgroundColor="#42a5f5"
    progressActivity:errorTitleTextColor="@color/primaryTextColor"
    progressActivity:errorContentTextColor="@color/primaryTextColor"
    xmlns:progressActivity="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/tools">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android" />


    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_cameraTargetLat="42.40817"
        mapbox:mapbox_cameraTargetLng="-71.11375"
        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
        mapbox:mapbox_cameraZoom="14" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">
    </android.support.v7.widget.RecyclerView>

</com.vlonjatg.progressactivity.ProgressFrameLayout>