<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/overlayImg"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/ic_action_check"
                android:adjustViewBounds="true"
                android:visibility="invisible"/>
            </FrameLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="12sp"
                android:gravity="center" />

        </LinearLayout>
</android.support.v7.widget.CardView>